syntax = "proto3";

message Coordinate {
    double latitude = 1 [json_name="latitude"];
    double longitude = 2 [json_name="longitude"];
}

message Location {
    string address = 1 [json_name="address"];
    Coordinate coordinate = 2 [json_name="coordinate"];
    int64 created_at = 3 [json_name="created_at"];
    string name = 4 [json_name="name"];
    string url = 5 [json_name="url"];
}

message MediaData {
    string source = 1 [json_name="source"];
    string thumbnail = 2 [json_name="thumbnail"];
    string type = 3 [json_name="type"];
}

message Tag {
    int64 id = 1 [json_name="id"];
    string name = 2 [json_name="name"];
}

message Post {
    int64 id = 1 [json_name="id"];
    string post = 2 [json_name="post"];
    int64 timestamp = 3 [json_name="timestamp"];
    string title = 4 [json_name="title"];
    string type = 5 [json_name="type"];
    string url = 6 [json_name="url"];
    Location location = 7 [json_name="location"];
    repeated MediaData mediaData = 8 [json_name="mediaData"];
    repeated Tag tag = 9 [json_name="tag"];
}

message PostsResponse {
    repeated Post result = 1 [json_name="result"];
}